--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
+    "express-rate-limit": "^7.2.0",
+    "http-proxy-middleware": "^2.0.6",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.2",
     "nodemon": "^3.1.0",
